# gpu_accelerate_qg

./: CMakeLists.txt  README.md
src/: main.cpp  qg_solver.cpp  qg_solver.h
